# database-engine

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL.md  README.md  client_test.wal  fresh_db.json  generate.py  justfile  mydb.json  mydb.wal  mydb.wal.bak-20260416T1453Z  mydb.wal.old  server_test.json  test_bench.json  test_colored.json  test_concur.json  test_concur.wal  test_db.wal  test_db3.wal  test_db4.wal  test_server.wal
.sisyphus/: ralph-loop.local.md
benchmarks/: index.html
src/: bench_1m.rs  bench_sqlite.rs  bench_ycsb.rs  btree.rs  buffer.rs  catalog.rs  client.rs  disk.rs  disk_btree.rs  lexer.rs  lib.rs  load_tester.rs  main.rs  parser.rs  planner.rs  server.rs  server_bin.rs  storage.rs  table_heap.rs  table_page.rs  wal.rs  ycsb_core.rs
