[package]
name = "database-engine"
version = "0.3.0"
edition = "2024"
default-run = "rustdb"

[lib]
name = "database_engine"
path = "src/lib.rs"

[[bin]]
name = "rustdb"
path = "src/main.rs"

[[bin]]
name = "rustdb-server"
path = "src/server_bin.rs"

[[bin]]
name = "rustdb-client"
path = "src/client.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
rustyline = "14.0"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.8"
